--- a/index.html
+++ b/index.html
@@ -1,15 +1,108 @@
-<<!DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
+<head>
+    <meta charset="UTF-8">
+    <title>Famous Monuments</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f4f6;
+            color: #1f2937;
+            padding: 40px;
+        }
 
-        <title>HTML Structure</title>
+        .container {
+            max-width: 700px;
+            margin: auto;
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-    </head>
+        h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #111827;
+        }
 
-    <body>
-        Welcome to codingal...
-        Our motive is to make all the children fall in love for coding...
-    </body>
+        ul {
+            margin-bottom: 30px;
+        }
 
-    </html>
+        ul li {
+            margin-bottom: 8px;
+            font-size: 16px;
+        }
+
+        ul li a {
+            color: #2563eb;
+            text-decoration: none;
+        }
+
+        ul li a:visited {
+            color: #7c3aed;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 12px;
+            border: 1px solid #d1d5db;
+            text-align: left;
+        }
+
+        th {
+            background-color: #e5e7eb;
+            font-weight: bold;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Famous Monuments</h1>
+
+        <ul>
+            <li><a href="#">Taj Mahal</a></li>
+            <li><a href="#">Effile Tower</a></li>
+            <li><a href="#">Statue of Liberty</a></li>
+            <li><a href="#">Pyramids</a></li>
+            <li><a href="#">Great Wall Of China</a></li>
+        </ul>
+
+        <table>
+            <tr>
+                <th>Monument</th>
+                <th>Location</th>
+            </tr>
+            <tr>
+                <td>Effile Tower</td>
+                <td>Paris, France</td>
+            </tr>
+            <tr>
+                <td>Statue of Liberty</td>
+                <td>New York, USA</td>
+            </tr>
+            <tr>
+                <td>Pyramids</td>
+                <td>Cairo, Egypt</td>
+            </tr>
+            <tr>
+                <td>Taj Mahal</td>
+                <td>Agra, India</td>
+            </tr>
+            <tr>
+                <td>Great Wall of China</td>
+                <td>China</td>
+            </tr>
+        </table>
+    </div>
+</body>
+
+</html>
